--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,11 @@
-<p>
-  home works!
-</p>
+<!--<link rel="stylesheet" href="home.component.css" type="text/css">-->
+<html>
+  <body>
+    <div class="page">
+      <h1 class = "app-title">Mars Colony</h1>
+        <a class="enter-button" routerLink="/register"></a>
+      <p class = "tap-message">Tap circle to enter</p>
+      
+    </div>
+  </body>
+</html>
