--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="page">
-  <h1 class = "app-title">Mars Colony</h1>
+  <h1 class = "title">Mars Colony</h1>
     <a class="enter-button" routerLink="/register"></a>
   <p class = "tap-message">Tap circle to enter</p>      
 </div>
