Added headings and colour to background of Register page.

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,4 +1,5 @@
-  <p>
-  register works!
-</p>
+<div class = "page">
+  <h2 class="title">Register</h2>
+  <h2 class="title">Check in</h2>
+</div>
 
