--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -6,9 +6,8 @@
     width: 100vw;
 }
 
-.app-title {
+.title {
     text-align: center;
-    text-transform: uppercase;
     font-size: 36px;
     font-weight: 100;
 }
