Styled input fields on Register page.

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,5 +1,10 @@
 <div class = "page">
   <h2 class="title">Register</h2>
+  <form class="register_form">
+    <input type="text" ng-model="" placeholder="Name"/>
+    <input type="text" ng-model="" placeholder="Age" />
+    <input type="text" ng-model="" placeholder="Select occupation" />
+  </form>
   <h2 class="title">Check in</h2>
 </div>
 
