--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -11,3 +11,37 @@
     font-size: 36px;
     font-weight: 100;
 }
+
+.register-form {
+    padding: 50px;
+}
+
+input {
+    display: block;
+    font-family: "Roboto", sans-serif;
+    font-size: 20px;
+    background: #000;
+    border-top: 0;
+    border-left: 0;
+    border-right: 0;
+    border-bottom: 1px solid white;
+    width: 100vw;
+    margin: 50px;
+   
+}
+
+input::-webkit-input-placeholder {
+  color: red;
+}
+
+/*form {
+    display: flex;
+    flex-direction: column;
+    border-top: 0 solid #000;
+    border-left: 0 solid #000;
+    border-right: 0 solid #000;
+    border-bottom: 1px solid #fff;
+    background: #000;
+    box-shadow: 0 0 5px #5cd053;
+    border-color: #000;
+}*/
