--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,9 +1,11 @@
 <div class = "page">
   <h2 class="title">Register</h2>
   <form class="register_form">
+    <fieldset>
     <input type="text" ng-model="" placeholder="Name"/>
     <input type="text" ng-model="" placeholder="Age" />
     <input type="text" ng-model="" placeholder="Select occupation" />
+    </fieldset>
   </form>
   <h2 class="title">Check in</h2>
 </div>
