--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -13,12 +13,35 @@
     padding-top: 35px;
 }
 
+.register-button {
+    color: #fff;
+    background: #000;
+    border: 0;
+    font-family: "Roboto", sans-serif;
+    font-size: 35px;
+}
+
 .register-form {
     padding: 50px;
 }
 
-fieldset {
- 
+.reg-button {
+ padding-top: 150px;
+ text-align: center;
+}
+
+.select-occupation {
+    font-size: 18px;
+    color: #ed403e;
+    background: #000;
+    border-top: 0;
+    border-left: 0;
+    border-right: 0;
+    border-bottom: 1px solid #fff;
+    width: 95%;
+    padding-top: 25px;
+    padding-left: 10px;
+    margin-left: 25px;
 }
 
 input {
