Styled Register and Report pages.

--- a/src/app/encounters/encounters.component.html
+++ b/src/app/encounters/encounters.component.html
@@ -1,3 +1,15 @@
-<p>
-  encounters works!
-</p>
+<div class = "page">
+  <div class="top-section">
+    <h2 class="title">Recent Encounters</h2>
+    <p>See an Alien? Report it!</p>
+  </div>
+  <div class="encounters-list">
+    <ul>
+      <li>
+      <li>
+    </ul>
+  </div>
+  <div class = "report-button">
+    <a routerLink="/report">Report Encounter</a>
+  </div>
+</div>
