Styled Report page.

--- a/src/app/report/report.component.html
+++ b/src/app/report/report.component.html
@@ -1,3 +1,17 @@
-<p>
-  report works!
-</p>
+<div class = "page">
+  <div class="top-section">
+    <h2 class="title">Report Encounter</h2>
+    <p>Safte on Mars is your responsibility</p>
+  </div>
+  <div class="alien-list">
+    <select class="alien-type" name="alien-type">
+        <option value="specialK">Special K</option>
+        <option value="endomorph">Endomorph</option>
+        <option value="octospider">Octospider</option>
+        <option value="thePredator">The Predator</option>
+      </select>
+  </div>
+  <div class = "submit-button">
+    <button class="submit-btn">Submit Report</button>
+  </div>
+</div>
