--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -3,14 +3,11 @@
   <form class="register_form">
     <fieldset>
       <input type="text" ng-model="" placeholder="Name"/>
-      <input type="text" ng-model="" placeholder="Age" />
-      <select class="select-occupation" name="select occupation" placeholder="select occupation">
-        <option value="alienHunter">Alien Hunter</option>
-        <option value="yogaTeacher">Yoga Teacher</option>
-        <option value="dustFarmer">Dust Farmer</option>
-        <option value="feDeveloper">Front-end Developer</option>
+      <input type="number" ng-model="" placeholder="Age" />
+      <select class="select-occupation" name="select occupation">
+          <select required>
+              <option value="(none)">Select an occupation</option>
       </select>
-      <!--<input type="text" ng-model="" placeholder="Select occupation" />-->
     </fieldset>
     <fieldset class="reg-button">
       <a routerLink="/encounters"><button class="register-button" type="submit" ng-model="">Check in</button></a>
