--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -1,6 +1,6 @@
 .page {
     font-family: 'Roboto', sans-serif;
-    color: #fff;
+    // color: #fff;
     background-color: #000;
     height: 100vh;
     width: 100vw;
@@ -9,25 +9,46 @@
 .title {
     text-align: center;
     font-size: 36px;
+    color: #fff;
     font-weight: 100;
     padding-top: 35px;
+    padding-bottom: 33px;
 }
 
-.register-button {
-    color: #fff;
-    background: #000;
-    border: 0;
-    font-family: "Roboto", sans-serif;
-    font-size: 35px;
+form {
+    width: 95%;
 }
 
 .register-form {
     padding: 50px;
 }
 
-.reg-button {
- padding-top: 150px;
- text-align: center;
+input {
+    display: block;
+    /*font-family: "Roboto", sans-serif;*/
+    color: #fff;
+    font-size: 18px;
+    background: #000;
+    border-top: 0;
+    border-left: 0;
+    border-right: 0;
+    border-bottom: 1px solid white;
+    width: 93vw;
+    padding-top: 12px;
+    padding-bottom: 5px;
+    padding-left: 10px;
+    margin-left: 30px;
+}
+
+// Turns off number spinner (arrows)
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+
+input::-webkit-input-placeholder {
+  color: #ed403e;
 }
 
 .select-occupation {
@@ -38,31 +59,30 @@
     border-left: 0;
     border-right: 0;
     border-bottom: 1px solid #fff;
-    width: 95%;
-    padding-top: 25px;
-    padding-left: 10px;
-    margin-left: 25px;
-}
-
-input {
-    display: block;
-    /*font-family: "Roboto", sans-serif;*/
-    font-size: 18px;
-    background: #000;
-    border-top: 0;
-    border-left: 0;
-    border-right: 0;
-    border-bottom: 1px solid white;
-    width: 93vw;
+    width: 98%;
     padding-top: 30px;
     padding-left: 10px;
-    margin-left: 30px;
-   
+    margin-left: 25px;
+    -webkit-appearance: none; //removes dropdown arrow
 }
 
-input::-webkit-input-placeholder {
-  color: #ed403e;
+select option {
+    background: #fff;
 }
+
+.reg-btn {
+ padding-top: 150px;
+ text-align: center;
+}
+
+.register-button {
+    color: #fff;
+    background: #000;
+    border: 0;
+    font-family: "Roboto", sans-serif;
+    font-size: 35px;
+}
+
 
 /*form {
     display: flex;
