--- a/src/app/report/report.component.html
+++ b/src/app/report/report.component.html
@@ -1,17 +1,27 @@
 <div class = "page">
   <div class="top-section">
     <h2 class="title">Report Encounter</h2>
-    <p>Safte on Mars is your responsibility</p>
+    <p>Safety on Mars is your responsibility</p>
   </div>
   <div class="alien-list">
-    <select class="alien-type" name="alien-type">
+      <select required class="alien-type" >          
+        <option value="">Select alien type</option>
+        <option *ngFor="let job of marsJobs" value="{{ job.id }}">{{ job.name }}</option>        
+      </select>
+
+    <!--<select class="alien-type" name="alien-type">
         <option value="specialK">Special K</option>
         <option value="endomorph">Endomorph</option>
         <option value="octospider">Octospider</option>
-        <option value="thePredator">The Predator</option>
-      </select>
+        <option value="thePredator">The Predator</option>-->
+      <!--</select>-->
+
+      <textarea>Action taken</textarea>
   </div>
-  <div class = "submit-button">
-    <button class="submit-btn">Submit Report</button>
+  <div class = "submit-btn">
+          <!--<button type="button" (click)="logColonist()" >Log colonist</button>-->
+
+    <button class="submit-button">Submit Report</button>
   </div>
 </div>
+<!--formControlName="job_id" name="job_id"-->
