Added form control for alien action on Report page.

--- a/src/app/report/report.component.html
+++ b/src/app/report/report.component.html
@@ -17,7 +17,7 @@
         <option value="thePredator">The Predator</option>-->
       <!--</select>-->
 
-      <textarea>Action taken</textarea>
+      <textarea class="alien-action">Action taken</textarea>
   </div>
   <div class = "submit-btn">
           <button type="button" (click)="logAlien()" >Log alien</button>
