Styled Encounters page.

--- a/src/app/encounters/encounters.component.html
+++ b/src/app/encounters/encounters.component.html
@@ -9,7 +9,7 @@
       <li>
     </ul>
   </div>
-  <div class = "report-button">
-    <a routerLink="/report">Report Encounter</a>
+  <div class = "report-btn">
+    <a routerLink="/report"><button class="report-button">Report Encounter</button></a>
   </div>
 </div>
