Changed class name on Report page for clarity.

--- a/src/app/report/report.component.html
+++ b/src/app/report/report.component.html
@@ -19,10 +19,10 @@
 
       <textarea class="alien-action" required formControlName="action" name="alienAction">Action taken</textarea>
   </div>
-  <div class = "submit-btn">
+  <div class = "submit-report-btn">
           <button type="button" (click)="logAlien()" >Log alien</button>
 
-    <button class="submit-button">Submit Report</button>
+    <button class="submit-report-button">Submit Report</button>
   </div>
   </form>
 </div>
