--- a/src/app/report/report.component.scss
+++ b/src/app/report/report.component.scss
@@ -68,12 +68,12 @@ textarea {
     padding: 5px;
 }
 
-.submit-btn {
+.submit-report-btn {
  padding-top: 25px;
  text-align: center;
 }
 
-.submit-button {
+.submit-report-button {
     font-family: "Roboto", sans-serif;
     color: #fff;
     background-color: #000;
