Added endpoints (API URLs).

--- a/src/app/notfound/notfound.component.html
+++ b/src/app/notfound/notfound.component.html
@@ -1,3 +1,6 @@
-<p>
-  notfound works!
-</p>
+<div class="page">
+  <h2 class="title"> Error 404</h2>
+  <p class="warning-colour">This is an unauthorized area.</p>
+  <p> You are trespassing. Please return from whence you came.</p>
+  <p>However, if you are a law abiding colonist, please disregard and have a most fantastic day!</p>
+</div>
