--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,18 +1,23 @@
 <div class = "page">
   <h2 class="title">Register</h2>
   
-  <form [formGroup]="registerForm" [ngClass]="{ invalid: registerForm.invalid }" class="register_form">    
+  <form [formGroup]="registerForm" 
+    class="register_form"
+    [ngClass]="{ 'submitting': submitting }" 
+    (ngSubmit) = "postNewColonist($event)">    
     <fieldset>
-      <input type="text" placeholder="Name" required formControlName="name" name="colonistName" >/>
+      <input type="text" placeholder="Name" formControlName="name" name="colonistName" >/>
       <input type="number" placeholder="Age" formControlName="age" name="colonistAge" />
-      <select required class="select-occupation" formControlName="job_id" name="job_id">          
+      <select class="select-occupation" formControlName="job_id" name="job_id">          
         <option value="">Select occupation</option>
         <option *ngFor="let job of marsJobs" value="{{ job.id }}">{{ job.name }}</option>        
       </select>
     </fieldset>
     <fieldset class="reg-btn">
-      <button type="button" (click)="logColonist()" >Log colonist</button>
-      <a routerLink="/encounters"><button class="register-button" type="button" >Check in</button></a>
+      <!--<button type="button"  >Log colonist</button>-->
+      <!--<a routerLink="/encounters">-->
+      <button class="register-button">Check in</button>
+      <!--</a>-->
     </fieldset>
   </form>
 </div>
