Added GET and POST https requests for Report page.

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -15,9 +15,9 @@
     </fieldset>
     <fieldset class="reg-btn">
       <!--<button type="button"  >Log colonist</button>-->
-      <!--<a routerLink="/encounters">-->
+      <a routerLink="/encounters">
       <button class="register-button">Check in</button>
-      <!--</a>-->
+      </a>
     </fieldset>
   </form>
 </div>
