--- a/src/app/encounters/encounters.component.html
+++ b/src/app/encounters/encounters.component.html
@@ -4,12 +4,34 @@
     <p>See an Alien? Report it!</p>
   </div>
   <div class="encounters-list">
+    
     <ul>
       <li>
       <li>
     </ul>
   </div>
   <div class = "report-btn">
-    <a routerLink="/report"><button class="report-button">Report Encounter</button></a>
+    <a routerLink="/report" routerLinkActive="active"><button class="report-button">Report Encounter</button></a>
   </div>
 </div>
+
+
+<form [formGroup]="registerForm" 
+    class="register_form"
+    [ngClass]="{ 'submitting': submitting }" 
+    (ngSubmit) = "postNewColonist($event)">    
+    <fieldset>
+      <input type="text" placeholder="Name" formControlName="name" name="colonistName" >/>
+      <input type="number" placeholder="Age" formControlName="age" name="colonistAge" />
+      <select class="select-occupation" formControlName="job_id" name="job_id">          
+        <option value="">Select occupation</option>
+        <option *ngFor="let job of marsJobs" value="{{ job.id }}">{{ job.name }}</option>        
+      </select>
+    </fieldset>
+    <fieldset class="reg-btn">
+      <!--<button type="button"  >Log colonist</button>-->
+      <!--<a routerLink="/encounters">-->
+      <button class="register-button">Check in</button>
+      <!--</a>-->
+    </fieldset>
+  </form>
