--- a/src/app/encounters/encounters.component.scss
+++ b/src/app/encounters/encounters.component.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     font-family: 'Roboto', sans-serif;
+    font-size: 18px;
     color: #000;
     background-color: #fff;
     height: 100vh;
@@ -23,7 +24,16 @@ p {
 
 .encounters-list {
     text-align: left;
-    height: 100vh;
+    padding: 0 1rem 2rem;
+    overflow: scroll;
+}
+
+.encounters-list li {
+    padding: 5px;
+}
+
+.encounters-list p {
+    text-align: left;
 }
 
 .report-btn {
