--- a/src/app/report/report.component.html
+++ b/src/app/report/report.component.html
@@ -10,7 +10,7 @@
   <div class="alien-list">
       <select class="alien-type" formControlName="atype" name="atype">          
         <option value="">Select alien type</option>
-        <option *ngFor="let alien of alienTypes" value="{{ alien.id }}">{{ alien.type }}</option>        
+        <option *ngFor="let alien of alienTypes" value="{{ alien.type }}">{{ alien.type }}</option>        
       </select>
 
       <textarea class="alien-action" required formControlName="action" name="alienAction">Action taken</textarea>
