--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -51,6 +51,10 @@ input::-webkit-input-placeholder {
   color: #ed403e;
 }
 
+.invalid-input {
+    box-shadow: 0 0 1em red;
+}
+
 .select-occupation {
     font-size: 18px;
     color: #ed403e;
