Added styling and notification of invalid user input to Register form.

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -2,13 +2,12 @@
   <h2 class="title">Register</h2>
   
   <form [formGroup]="registerForm" 
-    class="register_form"
-    [ngClass]="{ 'submitting': submitting }" 
+    class="register_form"     
     (ngSubmit) = "postNewColonist($event)">    
     <fieldset>
-      <input type="text" class="invalid-input" placeholder="Name" formControlName="name" name="colonistName" >/>
-      <input type="number" placeholder="Age" formControlName="age" name="colonistAge" />
-      <select class="select-occupation" formControlName="job_id" name="job_id">          
+      <input type="text" placeholder="Name" formControlName="name" name="colonistName" [ngClass]="{ 'invalid-input': invalidInput }"/>
+      <input type="number" placeholder="Age" formControlName="age" name="colonistAge" [ngClass]="{ 'invalid-input': invalidInput }" />
+      <select class="select-occupation" formControlName="job_id" name="job_id" [ngClass]="{ 'invalid-input': invalidInput }">          
         <option value="">Select occupation</option>
         <option *ngFor="let job of marsJobs" value="{{ job.id }}">{{ job.name }}</option>        
       </select>
@@ -16,6 +15,7 @@
     <fieldset class="reg-btn">
       <!--<button type="button"  >Log colonist</button>-->
       <!--<a routerLink="/encounters">-->
+      <p [ngClass]="{ 'invalid-input-msg': invalidInput }" >Invalid input. Please try again.</p>
       <button class="register-button">Check in</button>
       <!--</a>-->
     </fieldset>
