--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -1,5 +1,7 @@
+@import '../../_theme.scss';
+
 .page {
-    font-family: 'Roboto', sans-serif;
+    font-family: $font__main;
     // color: #fff;
     background-color: #000;
     height: 100vh;
@@ -86,11 +88,7 @@ select option {
 }
 
 .register-button {
-    color: #fff;
-    background: #000;
-    border: 0;
-    font-family: "Roboto", sans-serif;
-    font-size: 35px;
+    @include button;
 }
 
 
