--- a/src/_theme.scss
+++ b/src/_theme.scss
@@ -1,12 +1,16 @@
 // Variables
 
 $font__main: "Roboto", sans-serif;
+$font__color__main: #fff;
 
 // Mixins
 @mixin button {
     font-family: $font__main;
+    font-size: 35px;
     color: #fff;
     background: #000;
-    border: 0;
-    font-size: 35px;
+    border: 0;   
+    width: 100%;
+    height: 83px;
+    margin-top: 150px;
 }
