--- a/src/app/encounters/encounters.component.scss
+++ b/src/app/encounters/encounters.component.scss
@@ -8,14 +8,17 @@
     height: 100vh;
     width: 100vw;
     text-align: center;
+}
 
+.top-section {
+    padding: 35px 0 35px 0;
 }
 
 .title {
     text-align: center;
     font-size: 36px;
     font-weight: 100;
-    padding-top: 35px;
+    // padding-top: 35px;
 }
 
 p {
