Styled Encounters page.

--- a/src/app/encounters/encounters.component.html
+++ b/src/app/encounters/encounters.component.html
@@ -1,7 +1,7 @@
 <div class = "page">
   <div class="top-section">
-    <h2 class="title">Recent Encounters</h2>
-    <p>See an Alien? Report it!</p>
+    <h1 class="title">Recent Encounters</h1>
+    <h3>See an Alien? Report it!</h3>
   </div>
   <div class="encounters-list"> 
     <ul>
@@ -11,7 +11,7 @@
       </li>
     </ul>
   </div>
-  <div class = "report-btn">
+  <div class = "bottom-section">
     <a routerLink="/report"><button class="report-button">Report Encounter</button></a>
   </div>
 </div>
