--- a/src/app/report/report.component.html
+++ b/src/app/report/report.component.html
@@ -14,7 +14,7 @@
           </select>
           <textarea class="alien-action" placeholder="Action taken" formControlName="action" name="alienAction" [ngClass]="{ 'invalid-input': invalidInput }">Action taken</textarea>
       </div>
-      <div>
+      <div class="bottom-section">
         <button class="submit-report-button">Submit Report</button>
         <p [ngClass]="{ 'invalid-input-msg': invalidInput }" >Invalid input. Please try again.</p>
       </div>
