Styled home page and added image.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,13 @@
 <div class="page">
-  <h1 class = "title">Mars Colony</h1>
-    <a class="enter-button" routerLink="/register" routerLinkActive="active"></a>
-  <p class = "tap-message">Tap circle to enter</p>      
+  <div class = "top-section">
+    <h1 class = "title">Mars Colony 1</h1>
+  </div>
+  <div class = "button">    
+     <a routerLink="/register" routerLinkActive="active">
+      <img class="fingerprint" src = "src/app/images/fingerprint.png">
+    </a>
+  </div>
+  <div class="bottom-section">
+    <p class = "tap-message">Press to enter</p>
+  </div>    
 </div>
