--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 @import '_reset.scss';
+
+body {
+    background-color: #000;
+}
+
+.loading {
+    background-color: #000;
+    color: #fff;
+    font-size: 16px;
+    width: 100%;
+}
